# rocket-rust-backend

./: Cargo.toml
src/: main.rs  repository.rs
src/custom_routes/: about.rs  mod.rs  profile.rs
templates/profile/: index.html.hbs  not_found.html.hbs
