[package]
name = "rocket-rust-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
serde = "1.0.152"
sqlite = "0.30.3"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars"]